# Fasteq-hip

./: .gitignore  .gitmodules  LICENSES  README.md  pyproject.toml  requirements.txt  setup.py
fasteq.egg-info/: PKG-INFO  SOURCES.txt
fasteq/cuda/: CMakeLists.txt  __init__.py
fasteq/cuda/src/: cwtp_bwd.cu  cwtp_fwd.cu  equi_linear.cu  fctp_bwd.cu  fctp_fwd.cu  mptp_bwd.cu  mptp_fwd.cu  ptx_inst.cuh  spherical_harmonics.cu  stc_bwd.cu  stc_fwd.cu
fasteq/fasteq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fasteq/hip/: CMakeLists.txt  __init__.py
fasteq/hip/src/: cuda_utils.hpp  cwtp_bwd.hip  cwtp_fwd.hip  mptp_bwd.hip  mptp_fwd.hip  warp_primitives.hpp
fasteq/ops/: cwtp.py  equi_linear.py  fctp.py  mptp.py  stc.py
fasteq/sycl/: __init__.py
test/: cuda_env.sh  mace_batch.py  prof.sh  summarize_ncu_kernels.py
